2017-01-13  Jérôme Pasquier  <rainbru@free.fr>

	* src/services/: change headers dates for 0217 for all sources.

2017-01-09  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/ResolutionHandler.cpp (probe): now return a temporary
	string from resultToString.

	* src/client/ResolutionHandler.cpp (resultToString): int result to
	string.

	* src/client/ResolutionHandler.cpp (probe): use RainbrurpgException
	to thrown error.

2016-12-28  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/ResolutionHandler.cpp (probeFromInts): remove unneeded
	function.

	* src/client/ResolutionHandler.cpp (probeFromWindow): implement a first
	version.
	* src/client/ResolutionHandler_Test.cpp (fromWindowFailWithNullPointer):
	add a probeFromWindow test for a NULL pointer.
	* src/client/GameEngine.hpp (getRendererWindow): rename to
	getRenderWindow to fix a typo.

	* src/client/ResolutionHandler.cpp (probeFromCfg): remove unneeded
	function.
	* src/client/GameEngine.hpp (getRenderSystem): add new getter.

2016-12-20  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/ResolutionHandler.cpp (probeFromString): implented using
	Boost.regex.

	* DEPENDENCIES: add Boost.Regex dependency.
	* CMakeLists.txt:search for Boost.Regex.

	* src/client/ResolutionHandler_Test.cpp: unit tests for previous class.
	* src/client/ResolutionHandler.cpp (ResolutionHandler): empty probe
	class.
	* src/client/ResolutionHandler.hpp: start new class implementation.

2016-12-18  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/TempMessage.cpp (TempMessage): using DejaVuSans-10-NoScale
	make the messages appear again.
	* src/client/GameEngine.cpp (initialiseCegui): move the try/catch
	of the font exception into TempMessage.cpp.

2016-12-14  Jérôme Pasquier  <rainbru@free.fr>

	* media/cegui-orig/fonts.zip: add media/fonts filesystem.

	* media/cegui-orig/fonts.zip: extract DejaVu-12 fonts.

2016-12-12  Jérôme Pasquier  <rainbru@free.fr>

	* src/logger/LoggerOutputYaml.cpp: update doxygen documentation.
